# meepo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MEMORY.md  README.md  SECURITY.md  SOUL.md  install.ps1  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: meepo.rb
config/: default.toml
crates/meepo-channels/: Cargo.toml
crates/meepo-channels/src/: alexa.rs  bus.rs  contacts.rs  discord.rs  email.rs  imessage.rs  lib.rs  notes.rs  rate_limit.rs  reminders.rs  slack.rs
crates/meepo-cli/: Cargo.toml
crates/meepo-cli/src/: config.rs  main.rs  template.rs
crates/meepo-cli/templates/code-reviewer/: SOUL.md  template.toml
crates/meepo-cli/templates/personal-assistant/: SOUL.md  template.toml
crates/meepo-cli/templates/research-agent/: SOUL.md  template.toml
crates/meepo-core/: Cargo.toml
crates/meepo-core/src/: agent.rs  api.rs  context.rs  corrective_rag.rs  lib.rs  middleware.rs  orchestrator.rs  query_router.rs  summarization.rs  tool_selector.rs  types.rs
crates/meepo-knowledge/: Cargo.toml
crates/meepo-knowledge/src/: chunking.rs  embeddings.rs  graph.rs  graph_rag.rs  lib.rs  memory_sync.rs  sqlite.rs  tantivy.rs
crates/meepo-scheduler/: Cargo.toml
crates/meepo-scheduler/src/: lib.rs  persistence.rs  runner.rs  watcher.rs
docs/: architecture.md
docs/plans/: 2026-02-09-windows-cross-platform-plan.md
scripts/: install.ps1  install.sh  run.ps1  setup.ps1  setup.sh  uninstall.ps1  uninstall.sh
(+33 files in other folders)
